apps/livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: livesync
spec:
  selector:
    app: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: 5984
